--- a/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
+++ b/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <FxCompile Include="ColorShader.fx" />
+    <FxCompile Include="RenderBase.fx" />
     <FxCompile Include="TextureShader.fx" />
     <FxCompile Include="Transform.fx" />
   </ItemGroup>
