--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -187,6 +187,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="KnightUltEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="NewGame_UI.cpp">
       <SubType>
       </SubType>
@@ -231,6 +235,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Knight.h" />
+    <ClInclude Include="KnightUltEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="NewGame_UI.h">
       <SubType>
       </SubType>
