--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -191,10 +191,12 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Monk.cpp" />
     <ClCompile Include="NewGame_UI.cpp">
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Ninja.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayLevel.cpp" />
     <ClCompile Include="PreCompile.cpp">
@@ -239,10 +241,12 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Monk.h" />
     <ClInclude Include="NewGame_UI.h">
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Ninja.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayLevel.h" />
     <ClInclude Include="PreCompile.h" />
