김준영 : 엔진업데이트 - 콜리젼 디버그 업데이트 1차. 오브젝트 기본구조 베이스 오브젝트로 이관

--- a/DIrectX/GameEngineCore/GameEngineCore.vcxproj
+++ b/DIrectX/GameEngineCore/GameEngineCore.vcxproj
@@ -204,6 +204,7 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="GameEngineRenderTarget.h" />
+    <ClInclude Include="GameEngineRenderUnit.h" />
     <ClInclude Include="GameEngineResources.h" />
     <ClInclude Include="GameEngineSampler.h" />
     <ClInclude Include="GameEngineShader.h" />
@@ -265,6 +266,7 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="GameEngineRenderTarget.cpp" />
+    <ClCompile Include="GameEngineRenderUnit.cpp" />
     <ClCompile Include="GameEngineResources.cpp" />
     <ClCompile Include="GameEngineSampler.cpp" />
     <ClCompile Include="GameEngineShader.cpp" />
