김준영 : 무녀 일반공격 ( 공격과 힐 교차). 투사체 힐일때 자신을 먼저 충돌하는 현상 해결해야함

--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -217,6 +217,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Pyromancer.cpp" />
+    <ClCompile Include="Pythoness.cpp" />
+    <ClCompile Include="PythonessAttack.cpp" />
+    <ClCompile Include="PythonessHeal.cpp" />
     <ClCompile Include="Swordman.cpp" />
     <ClCompile Include="SwordmanUltEffect.cpp" />
     <ClCompile Include="TextArrow.cpp">
@@ -275,6 +278,9 @@
     <ClInclude Include="PlayLevel.h" />
     <ClInclude Include="PreCompile.h" />
     <ClInclude Include="Pyromancer.h" />
+    <ClInclude Include="Pythoness.h" />
+    <ClInclude Include="PythonessAttack.h" />
+    <ClInclude Include="PythonessHeal.h" />
     <ClInclude Include="Swordman.h" />
     <ClInclude Include="SwordmanUltEffect.h" />
     <ClInclude Include="TextArrow.h">
