--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClCompile Include="PythonessSkillBomb.cpp">
       <Filter>GameUnit\Pythoness</Filter>
     </ClCompile>
+    <ClCompile Include="PythonessUlt.cpp">
+      <Filter>GameUnit\Pythoness</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContentsCore.h" />
@@ -198,6 +201,9 @@
       <Filter>GameUnit\Pythoness</Filter>
     </ClInclude>
     <ClInclude Include="PythonessSkillBomb.h">
+      <Filter>GameUnit\Pythoness</Filter>
+    </ClInclude>
+    <ClInclude Include="PythonessUlt.h">
       <Filter>GameUnit\Pythoness</Filter>
     </ClInclude>
   </ItemGroup>
