--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -216,6 +216,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Priest.cpp" />
     <ClCompile Include="Pyromancer.cpp" />
     <ClCompile Include="Pythoness.cpp" />
     <ClCompile Include="PythonessAttack.cpp" />
@@ -280,6 +281,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayLevel.h" />
     <ClInclude Include="PreCompile.h" />
+    <ClInclude Include="Priest.h" />
     <ClInclude Include="Pyromancer.h" />
     <ClInclude Include="Pythoness.h" />
     <ClInclude Include="PythonessAttack.h" />
