김준영 : 깊이버퍼 업데이트

--- a/DIrectX/GameEngineCore/GameEngineCore.vcxproj
+++ b/DIrectX/GameEngineCore/GameEngineCore.vcxproj
@@ -186,6 +186,7 @@
     </ClInclude>
     <ClInclude Include="GameEngineCoreObject.h" />
     <ClInclude Include="GameEngineDebugCore.h" />
+    <ClInclude Include="GameEngineDepthStencil.h" />
     <ClInclude Include="GameEngineDevice.h" />
     <ClInclude Include="GameEngineDirectBuffer.h" />
     <ClInclude Include="GameEngineIndexBuffer.h" />
@@ -247,6 +248,7 @@
     </ClCompile>
     <ClCompile Include="GameEngineCoreObject.cpp" />
     <ClCompile Include="GameEngineDebugCore.cpp" />
+    <ClCompile Include="GameEngineDepthStencil.cpp" />
     <ClCompile Include="GameEngineDevice.cpp" />
     <ClCompile Include="GameEngineDevice_Resources.cpp" />
     <ClCompile Include="GameEngineDirectBuffer.cpp" />
