김준영 : 플레이어 카드 업데이트

--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj
@@ -212,6 +212,7 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerCard.cpp" />
     <ClCompile Include="PlayLevel.cpp" />
     <ClCompile Include="PreCompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -229,6 +230,7 @@
     <ClCompile Include="PythonessSkill.cpp" />
     <ClCompile Include="PythonessSkillBomb.cpp" />
     <ClCompile Include="PythonessUlt.cpp" />
+    <ClCompile Include="StadiumBoard.cpp" />
     <ClCompile Include="Swordman.cpp" />
     <ClCompile Include="SwordmanUltEffect.cpp" />
     <ClCompile Include="TextArrow.cpp">
@@ -287,6 +289,7 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerCard.h" />
     <ClInclude Include="PlayLevel.h" />
     <ClInclude Include="PreCompile.h" />
     <ClInclude Include="Priest.h" />
@@ -299,6 +302,7 @@
     <ClInclude Include="PythonessSkill.h" />
     <ClInclude Include="PythonessSkillBomb.h" />
     <ClInclude Include="PythonessUlt.h" />
+    <ClInclude Include="StadiumBoard.h" />
     <ClInclude Include="Swordman.h" />
     <ClInclude Include="SwordmanUltEffect.h" />
     <ClInclude Include="TextArrow.h">
